# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cantrip-os-rootserver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
# build.rs depends on SEL4_OUT_DIR = "${ROOTDIR}/out/cantrip/kernel"
sel4-config = { path = "../../cantrip/apps/system/components/cantrip-os-common/src/sel4-config" }

[features]
default = []
CONFIG_PLAT_BCM2837 = []
CONFIG_PLAT_SHODAN = []
# Used by sel4-config to extract kernel config
CONFIG_PRINTING = []
CONFIG_DEBUG_BUILD = []
# Log level is Info unless LOG_DEBUG or LOG_TRACE are specified
LOG_DEBUG = []
LOG_TRACE = []

[lib]
name = "cantrip_os_rootserver"
path = "src/main.rs"
crate-type = ["staticlib"]

[dependencies.cantrip-os-common]
default-features = false
features = ["capdl_support", "logger_support"]
path = "../../cantrip/apps/system/components/cantrip-os-common"

[dependencies]
cfg-if = "1.0"
cstr_core = { version = "0.2.3", default-features = false }
log = { version = "0.4", features = ["release_max_level_info"] }
static_assertions = "1.1"
