# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cantrip-os-rootserver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
# build.rs depends on SEL4_OUT_DIR = "${ROOTDIR}/out/cantrip/kernel"
sel4-config = { path = "../../cantrip/apps/system/components/cantrip-os-common/src/sel4-config" }

[features]
default = [
    "LOG_INFO",
    "model/CONFIG_CAPDL_SHARED_FRAMES",
]
fill_from_cpio = [
    "model/CONFIG_CAPDL_LOADER_FILL_FROM_CPIO",
]
fill_from_sec = [
    "model/CONFIG_CAPDL_LOADER_FILL_FROM_SEC",
]
CONFIG_PLAT_BCM2837 = ["fill_from_cpio"]
CONFIG_PLAT_SHODAN = ["fill_from_cpio"]
CONFIG_PLAT_NEXUS = ["fill_from_cpio"]
# Used by sel4-config to extract kernel config
CONFIG_PRINTING = []
CONFIG_DEBUG_BUILD = []
# The runtime log level is Info unless LOG_DEBUG or LOG_TRACE are specified.
# We optimize the memory footprint by compiling out log messages that
# would otherwise be discarded.
LOG_INFO = ["log/release_max_level_info"]
LOG_DEBUG = ["log/release_max_level_debug"]
LOG_TRACE = ["log/release_max_level_trace"]

[dependencies]
cantrip-os-common = { path = "../../cantrip/apps/system/components/cantrip-os-common", default-features = false }
capdl = { path = "../../cantrip/apps/system/components/cantrip-os-common/src/capdl" }
cfg-if = "1.0"
core2 = { version = "0.3", default-features = false }
log = "0.4"
model = { path = "../../cantrip/apps/system/components/cantrip-os-common/src/model" }
static_assertions = "1.1"

[lib]
name = "cantrip_os_rootserver"
path = "src/lib.rs"
crate-type = ["staticlib"]
