cargo-features = ["edition2021"]

[package]
name = "kata-os-rootserver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
sel4-config = { path = "../../processmanager/apps/system/components/kata-os-common/src/sel4-config" }

[build-env]
SEL4_OUT_DIR = "${ROOTDIR}/out/kata/kernel"

[features]
default = []
CONFIG_PRINTING = []

[lib]
name = "kata_os_rootserver"
path = "src/main.rs"
crate-type = ["staticlib"]

[dependencies]
cstr_core = { version = "0.2.3", default-features = false }
kata-os-common = { path = "../../processmanager/apps/system/components//kata-os-common", default-features = false }
log = "0.4"
static_assertions = "1.1"
