[package]
name = "kata-os-rootserver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
# build.rs depends on SEL4_OUT_DIR = "${ROOTDIR}/out/kata/kernel"
sel4-config = { path = "../../processmanager/apps/system/components/kata-os-common/src/sel4-config" }

[features]
default = []
# Used by sel4-config to extract kernel config
CONFIG_PRINTING = []
# Log level is Info unless LOG_DEBUG or LOG_TRACE are specified
LOG_DEBUG = []
LOG_TRACE = []

[lib]
name = "kata_os_rootserver"
path = "src/main.rs"
crate-type = ["staticlib"]

[dependencies]
cstr_core = { version = "0.2.3", default-features = false }
kata-os-common = { path = "../../processmanager/apps/system/components//kata-os-common", default-features = false }
log = "0.4"
static_assertions = "1.1"
